infra/k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.org/server-snippet: "proxy_ssl_verify off;"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: local.dev
      http:
        paths:
          - path: /api/.*
            pathType: Prefix
            backend:
              service:
                name: your-api-srv
                port:
                  number: 3000
          # - path: /?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: client-authbase-srv
          #       port:
          #         number: 3000
  ingressClassName: nginx
